# ccg-homework

./: .gitignore  LICENSE  README.md
assignment_1/: CMakeLists.txt  README.md
assignment_1/cutgraph/: CMakeLists.txt
assignment_1/cutgraph/include/: CutGraph.h  CutGraphMesh.h
assignment_1/cutgraph/src/: CutGraph.cpp  Viewer.cpp
